Replace URL field by a direct file handler. Avoids CORS issues

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
         <div class="form-group">
             <div class="input-group mb-3">
                 <div class="input-group-prepend">
-                    <label class="input-group-text" for="encrypted_url">URL:</label>
-                    <input class="form-control" id="encrypted_url"></input>
+                    <label class="input-group-text" for="File">File:</label>
+                    <input class="form-control" type="file" id="encrypted_file"></input>
                 </div>
             </div>
             <div class="input-group mb-3">
