--- a/generate_key.html
+++ b/generate_key.html
@@ -22,6 +22,9 @@
                     <li class="nav-item">
                     <a class="nav-link" href="index.html">Decrypt file</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="encrypt.html">Encrypt file</a>
+                    </li>
                 </ul>
         </div>
 
